Melhora performance carregamento de imagens.
This close #163

--- a/templates/base.html
+++ b/templates/base.html
@@ -97,8 +97,7 @@
 
     <!-- Main Footer Start -->
     <footer class="main--footer main--footer-light">
-      <p>Copyright &copy; <a target="_blank" href="https://www.mulhergorila.com/">Mulher Gorila</a>. All Rights
-        Reserved.</p>
+      <p>Copyright &copy; <a target="_blank" href="https://www.mulhergorila.com/">Mulher Gorila</a></p>
     </footer>
     <!-- Main Footer End -->
   </main>
