Melhora a exibição de valores monetários.
This close #173

--- a/templates/dashboard_demo.html
+++ b/templates/dashboard_demo.html
@@ -64,7 +64,7 @@
 
               <p class="miniStats--caption text-orange">Total nos</p>
               <h3 class="miniStats--title h4">Pedidos</h3>
-              <p class="miniStats--num text-orange">{{ pedidos_valor_total }}</p>
+              <p class="miniStats--num text-orange">R$ {{ pedidos_valor_total|currency_display }}</p>
             </div>
           </div>
           <!-- Mini Stats Panel End -->
