Adiciona campo de observações ao pedido.
Necessário aplicar migraçoes.
`python manage.py migrate`

This close #175

--- a/templates/pedidos/pedido_aberto.html
+++ b/templates/pedidos/pedido_aberto.html
@@ -51,7 +51,6 @@
           <form action="{% url 'pedido_aberto' %}" method="POST">
             {% csrf_token %}
 
-            {{ form }}
             {{ formset.management_form }}
             <table class="table">
               <thead>
@@ -74,6 +73,12 @@
                   <td style="text-align: center;">{{ item_pedido_form.DELETE }}</td>
                 </tr>
               {% endfor %}
+              <tr>
+                <td style="text-align: left;" colspan="5">
+                  <p><strong>Observações:</strong></p>
+                  {{ form.observacoes }}
+                </td>
+              </tr>
               <tr>
                 <td colspan="3"><strong>Subtotal</strong></td>
                 <td style="text-align: right;"><strong>R$ {{ pedido_total|currency_display }}</strong></td>
