--- a/templates/products/create.html
+++ b/templates/products/create.html
@@ -161,6 +161,19 @@
                   </div>
                 </div>
               </div>
+
+              <div class="form-group row">
+                <span class="label-text col-md-3 col-form-label">Imagem:</span>
+
+                <div class="col-md-9">
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text"><i class="fas fa-images"></i></span>
+                    </div>
+                    {{ form.imagem }}
+                  </div>
+                </div>
+              </div>
             </div>
             <!-- Tab Pane End -->
 
