Implementa exportação de PDF e impressão do pedido.
This close #64

--- a/templates/pedidos/list.html
+++ b/templates/pedidos/list.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load core_extras %}
 
-{% block title %}Produtos - S.I.E.{% endblock %}
+{% block title %}Pedidos - S.I.E.{% endblock %}
 {% block page-title %}Pedidos{% endblock %}
 
 {% block breadcrumb %}
