SetUp delivery responsibility term.
Adicionado botão para geração de PDF do termo de entrega na tela do pedido.
This close #193

--- a/templates/pedidos/pedido_fechado.html
+++ b/templates/pedidos/pedido_fechado.html
@@ -158,6 +158,9 @@
           </div>
 
           <div class="invoice--actions">
+            {% if request.user|has_group:"Gerente" %}
+              <a href="{% url 'pedido_export_delivery_term_pdf' pk=pedido.pk %}" class="btn btn-rounded btn-outline-primary">Termo de Entrega</a>
+            {% endif %}
             <a href="{% url 'pedido_export_pdf' pk=pedido.pk %}" class="btn btn-rounded btn-outline-secondary">Baixar PDF</a>
             <a href="#" onClick="window.print()" class="btn btn-rounded btn-info">Imprimir</a>
           </div>
