SetUp Promo logic.
Adiciona logica para itens com valor promocional.
This close #214

--- a/templates/products/list.html
+++ b/templates/products/list.html
@@ -82,7 +82,11 @@
               {% endif %}
             </td>
             <td>
-              {{ produto.descricao|normalize_for_table }}
+              {% if produto.coeficiente <= .45 %}
+                <strong>{{ produto.descricao|normalize_for_table }}</strong> <span class="label label-red">Promoção</span>
+              {% else %}
+                {{ produto.descricao|normalize_for_table }}
+              {% endif %}
             </td>
             <td>
               R$ {{ produto.cliente_paga|currency_display }}
