Configura Produtos Atacado.
Adiciona form para model ProdutoAtacado.
Adiciona formulário no front-end, template e view.
Adiciona coluna atacado para PedidoItem Model.
Adiciona path/url para add_item_atacado.
Adiciona path/url para product_atacado_list.
Adiciona view add_item_atacado.
Adiciona view product_atacado_list.
Ajusta teste de produto update.
Ajustas templates de pedido e navbar.
Aplica migrações.

This close #216

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -140,7 +140,13 @@
           <li>
             <a href="{% url 'product_list' %}">
               <i class="fa fa-th-list"></i>
-              <span>Consultar</span>
+              <span>Varejo</span>
+            </a>
+          </li>
+          <li>
+            <a href="{% url 'product_list_atacado' %}">
+              <i class="fa fa-th-list"></i>
+              <span>Atacado</span>
             </a>
           </li>
         </ul>
