--- a/templates/products/update.html
+++ b/templates/products/update.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 {% load static %}
 
 {% block title %}Atualiza Produto - S.I.E.{% endblock %}
@@ -11,6 +12,25 @@
 {% endblock %}
 
 {% block content %}
+  <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+          crossorigin="anonymous"></script>
+  <script>
+    $(document).ready(function () {
+      $("#add-item").click(function (ev) {
+        ev.preventDefault();
+        var count = $('#opcoes-atacado').children().length;
+        var tmplMarkup = $("#item-opcoes-atacado").html();
+        var compiledTmpl = tmplMarkup.replace(/__prefix__/g, count);
+        $("div#opcoes-atacado").append(compiledTmpl);
+        // update form count
+        $('#id_product-TOTAL_FORMS').attr('value', count + 1);
+        // update css
+        $('.input-group')[count].childNodes[1].className = 'col-lg-9 col-md-12 col-sm-12';
+        $('.input-group')[count].childNodes[3].className = 'col-lg-2 col-md-6 col-sm-6';
+        $('.input-group')[count].childNodes[5].className = 'col-lg-1 col-md-6 col-sm-6';
+      });
+    });
+  </script>
   <!-- Main Content Start -->
   <section class="main--content">
     <div class="panel">
@@ -33,13 +53,22 @@
       </div>
     {% endif %}
 
-    {% if messages %}
-      {% for message in messages %}
-        <div class="alert alert-success alert-dismissible fade show" role="alert">
-        {{ message }}
+    {% if formset.errors %}
+      <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        {{ formset.errors }}
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
+      </div>
+    {% endif %}
+
+    {% if messages %}
+      {% for message in messages %}
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+          {{ message }}
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
       {% endfor %}
     {% endif %}
@@ -62,6 +91,9 @@
             </li>
             <li class="nav-item">
               <a href="#tab02" data-toggle="tab" class="nav-link">Detalhes</a>
+            </li>
+            <li class="nav-item">
+              <a href="#tab03" data-toggle="tab" class="nav-link">Atacado</a>
             </li>
           </ul>
           <!-- Tabs Nav End -->
@@ -94,7 +126,7 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text">¥</span>
                     </div>
-                    {{  form.pago_na_china }}
+                    {{ form.pago_na_china }}
                   </div>
                 </div>
               </div>
@@ -238,6 +270,57 @@
                   {{ produto.unitario_em_dolar }}
                 </div>
               </div>
+
+            </div>
+            <!-- Tab Pane End -->
+
+            <!-- Tab Pane Start -->
+            <div class="tab-pane fade" id="tab03">
+
+              {{ formset.management_form|crispy }}
+
+              <div id="opcoes-atacado">
+                {% for opcao_atacado in formset %}
+                  <div id="item-{{ forloop.counter0 }}" class="row form-row spacer">
+                    <div class="input-group">
+                      {{ opcao_atacado.id }}
+                      {{ opcao_atacado.produto }}
+                      <div class="col-lg-9 col-md-12 col-sm-12">
+                        {{ opcao_atacado.quantidade|as_crispy_field }}
+                      </div>
+                      <div class="col-lg-2 col-md-6 col-sm-6">
+                        {{ opcao_atacado.coeficiente|as_crispy_field }}
+                      </div>
+                      <div class="col-lg-1 col-md-6 col-sm-6" style="margin: 30px 0 0 0;">
+                        {{ opcao_atacado.DELETE|as_crispy_field }}
+                      </div>
+                    </div>
+                  </div>
+                {% endfor %}
+              </div>
+              <div class="row mt-3">
+                <div class="col-12">
+                  <a class="btn btn-info" id="add-item"><i class="fa fa-plus"></i> Add Item</a>
+                </div>
+              </div>
+
+            <script type="text/html" id="item-opcoes-atacado">
+              <div id="item-__prefix__" style="margin-top: 10px" class="row form-row spacer">
+                <div class="input-group">
+                  {{ opcao_atacado.id }}
+                  {{ opcao_atacado.produto }}
+                  <div class="col-lg-9 col-md-12 col-sm-12">
+                    {{ formset.empty_form.quantidade|as_crispy_field }}
+                  </div>
+                  <div class="col-lg-2 col-md-6 col-sm-6">
+                    {{ formset.empty_form.coeficiente|as_crispy_field }}
+                  </div>
+                  <div class="col-lg-1 col-md-6 col-sm-6" style="margin: 30px 0 0 0;">
+                    {{ formset.empty_form.DELETE|as_crispy_field }}
+                  </div>
+                </div>
+              </div>
+            </script>
 
             </div>
             <!-- Tab Pane End -->
