--- a/templates/products/update.html
+++ b/templates/products/update.html
@@ -212,9 +212,24 @@
               <div class="form-group row">
                 <span class="label-text col-md-3 col-form-label">Produto Ativo:</span>
 
-                <div class="col-md-9">
+                <div class="col-md-1">
                   <div class="input-group">
                     {{ form.active }}
+                  </div>
+                </div>
+              </div>
+
+              <div class="form-group row">
+                <span class="label-text col-md-3 col-form-label">Preço automático:</span>
+
+                <div class="col-md-1">
+                  <div class="input-group">
+                      {{ form.dolar_automatico }}
+                  </div>
+                </div>
+                <div class="col-md-8">
+                  <div class="input-group">
+                      <p>Se selecionado o valor de venda será baseado na cotação do dolar mais recente ao inves do dolar cotado na compra</p>
                   </div>
                 </div>
               </div>
