Atualiza dados bancários no dashboard da revenda.
- Atualiza dependências.

This closes #398, #387

--- a/templates/dashboard_demo.html
+++ b/templates/dashboard_demo.html
@@ -105,23 +105,23 @@
           </div>
 
           <div class="panel-content panel-about" style="padding: 10px 20px 14px;">
-            <p>XK - Tron Ind. E Comércio de Peças e Acessórios Eletrônicos Ltda</p>
+            <p>Kun Zhao</p>
             <table>
               <tr>
-                <th><i class="fas fa-briefcase"></i>CNPJ:</th>
-                <td>18.966.170/0001-90</td>
+                <th><i class="fas fa-briefcase"></i>CPF:</th>
+                <td>012.536.779-13</td>
               </tr>
               <tr>
                 <th><i class="fas fa-building"></i>Banco:</th>
-                <td>Bradesco</td>
+                <td>Itaú</td>
               </tr>
               <tr>
                 <th><i class="fas fa-map-marker-alt"></i>Agência:</th>
-                <td>2422-8</td>
+                <td>6664</td>
               </tr>
               <tr>
                 <th><i class="fas fa-money-bill-alt"></i>Conta Corrente:</th>
-                <td>23881-3</td>
+                <td>18926-0</td>
               </tr>
             </table>
           </div>
