--- a/templates/dashboard_demo.html
+++ b/templates/dashboard_demo.html
@@ -104,9 +104,12 @@
             <h3 class="panel-title">Dados Bancários</h3>
           </div>
 
-          <div class="panel-content panel-about" style="padding: 10px 20px 14px;">
-            <p>Kun Zhao</p>
+          <div class="panel-content panel-about" style="padding: 16px 20px;">
             <table>
+              <tr>
+                <th><i class="fas fa-user"></i>Titular:</th>
+                <td>Kun Zhao</td>
+              </tr>
               <tr>
                 <th><i class="fas fa-briefcase"></i>CPF:</th>
                 <td>012.536.779-13</td>
