SetUp new api urls
Configura novos endpoints para a API.
- /products/json/public/`TOKEN`
- /products/json/public/`CODIGO_PRODUTO`/`TOKEN`

e com token enviado no cabeçalho requisição.
- /api/products/
- /api/product/`CODIGO_PRODUTO`/
`'Token': 'TOKEN'`

--- a/templates/profile_update.html
+++ b/templates/profile_update.html
@@ -86,10 +86,16 @@
                     <summary>API Token</summary>
                     Token: {{ user.userprofile.api_secret_key }}
                     <p>Como usar:</p>
+                    <p>Você pode usar as URLs públicas com o Token. Ex.:</p>
                     <ul>
-                      <li>/products/api/{{ user.userprofile.api_secret_key }}</li>
-                      <li>/products/api/CODIGO_PRODUTO/{{ user.userprofile.api_secret_key }}</li>
+                      <li>/products/json/public/{{ user.userprofile.api_secret_key }}</li>
+                      <li>/products/json/public/CODIGO_PRODUTO/{{ user.userprofile.api_secret_key }}</li>
                     </ul>
+                    <p>
+                      ou enviar o Token no cabeçalho da requisição. Ex.:<br>
+                      <code>'Token': '{{ user.userprofile.api_secret_key }}'</code>
+                    </p>
+
                   </details>
                 </div>
               </div>
