HotFix added API url in profile page

--- a/templates/profile_update.html
+++ b/templates/profile_update.html
@@ -93,7 +93,11 @@
                     </ul>
                     <p>
                       ou enviar o Token no cabeçalho da requisição. Ex.:<br>
-                      <code>'Token': '{{ user.userprofile.api_secret_key }}'</code>
+                    <ul>
+                      <li>/api/products</li>
+                      <li>/api/product/CODIGO_PRODUTO</li>
+                    </ul>
+                    <code>'Token': '{{ user.userprofile.api_secret_key }}'</code>
                     </p>
 
                   </details>
