Temporarily disable wholesale products.
Desabilita temporariamente os produtos em atacado para revenda.

This close #580

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -143,12 +143,14 @@
               <span>Varejo</span>
             </a>
           </li>
+          {% if request.user|has_group:"Gerente" %}
           <li>
             <a href="{% url 'product_list_atacado' %}">
               <i class="fa fa-th-list"></i>
               <span>Atacado</span>
             </a>
           </li>
+        {% endif %}
         </ul>
       </li>
 
