--- a/templates/base_pdf.html
+++ b/templates/base_pdf.html
@@ -1,14 +1,16 @@
+{% load analytical %}
+{% load clicky %}
 <!DOCTYPE html>
 {% load static %}
 <html dir="ltr" lang="en" class="no-outlines">
 <head>
-
+  {% analytical_head_top %}
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- ==== Document Title ==== -->
-    <title>{% block title %}Zumaq Partners{% endblock %}</title>
+  <!-- ==== Document Title ==== -->
+  <title>{% block title %}Zumaq Partners{% endblock %}</title>
 
   <!-- ==== Document Meta ==== -->
   <meta name="author" content="Tiago Cordeiro">
@@ -21,10 +23,10 @@
   <!-- Page Level Stylesheets -->
   {% block extra_styles %}
   {% endblock %}
-
+  {% analytical_head_bottom %}
 </head>
 <body>
-
+{% analytical_body_top %}
 <!-- Wrapper Start -->
 <div class="wrapper">
 
@@ -74,6 +76,7 @@
 <!-- Page Level Scripts -->
 {% block extra_scripts %}
 {% endblock %}
-
+{% analytical_body_bottom %}
+{% clicky %}
 </body>
 </html>
