--- a/templates/base.html
+++ b/templates/base.html
@@ -133,6 +133,18 @@
 {% block extra_scripts %}
 {% endblock %}
 
+<script type="text/javascript">
+  var clicky_custom = {
+    href: '{{ request.path }}',
+    title: '{{ page_title }}',
+    session: {
+      username: '{{ user }}',
+      email: '{{ user.email }}'
+    },
+    timer: 200
+  };
+</script>
+
 {% analytical_body_bottom %}
 </body>
 </html>
