--- a/templates/pedidos/pedido_delivery_term_pdf.html
+++ b/templates/pedidos/pedido_delivery_term_pdf.html
@@ -46,7 +46,7 @@
       <table style="width: 100%;">
         <tr>
           <td style="text-align: center;">
-            <img src="https://cnczumaq.com/newsletter/img/zumaq-logo-mail.png" alt="CNC Zumaq">
+            <img src="https://cnczumaq.com/newsletter/img/zumaq-logo-simples.jpg" width="200" alt="CNC Zumaq">
           </td>
 
         </tr>
