--- a/templates/pedidos/pedido_e_termo_pdf.html
+++ b/templates/pedidos/pedido_e_termo_pdf.html
@@ -56,7 +56,7 @@
       <table style="width: 100%;">
         <tr>
           <td style="text-align: center;">
-            <img src="https://cnczumaq.com/newsletter/img/zumaq-logo-mail.png" alt="CNC Zumaq">
+            <img src="https://cnczumaq.com/newsletter/img/zumaq-logo-simples.jpg" width="200" alt="CNC Zumaq">
           </td>
 
         </tr>
@@ -133,7 +133,7 @@
       <table style="width: 100%;">
         <tr>
           <td>
-            <img src="https://cnczumaq.com/newsletter/img/zumaq-logo-mail.png" alt="CNC Zumaq">
+            <img src="https://cnczumaq.com/newsletter/img/zumaq-logo-simples.jpg" alt="CNC Zumaq">
           </td>
           <td>
             <h5 class="h5">CNC Zumaq</h5>
