New order separation and checking
Agora novos pedidos podem ser usados para separar os itens adicionando informações úteis ao pedido, como imagens, notas e informações do usuário responsável pela separação.

- Novos formulários para separação do pedido
- Novos campos nos modelos:
   - Pedido
   - PedidoItem
- Novos templates e urls para:
   -  listagem de pedidos para separação
   -  listagem de pedidos separados
   -  pedido em separação
- Novos items no menu principal do Gerente
- Update Django
- Fix django-mass-edit massadmin url

This close #643

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -144,13 +144,13 @@
             </a>
           </li>
           {% if request.user|has_group:"Gerente" %}
-          <li>
-            <a href="{% url 'product_list_atacado' %}">
-              <i class="fa fa-th-list"></i>
-              <span>Atacado</span>
-            </a>
-          </li>
-        {% endif %}
+            <li>
+              <a href="{% url 'product_list_atacado' %}">
+                <i class="fa fa-th-list"></i>
+                <span>Atacado</span>
+              </a>
+            </li>
+          {% endif %}
         </ul>
       </li>
 
@@ -185,6 +185,20 @@
               <span>Todos os pedidos</span>
             </a>
           </li>
+          {% if request.user|has_group:"Gerente" %}
+            <li>
+              <a href="{% url 'pedidos_list_separacao' %}">
+                <i class="fa fa-tasks"></i>
+                <span>Para separação</span>
+              </a>
+            </li>
+            <li>
+              <a href="{% url 'pedidos_list_separados' %}">
+                <i class="fa fa-tasks"></i>
+                <span>Separados</span>
+              </a>
+            </li>
+          {% endif %}
         </ul>
       </li>
 
